...
            window.windowLevel = .alert + 1
            let controller = UIViewController()
            controller.view.backgroundColor = .clear
            let number = UILabel()
            number.text = "\(overlays.count + 1)"
            number.font = .systemFont(ofSize: 8)
            number.accessibilityIdentifier = "debug.window.number"
            let new = UIButton(type: .system, primaryAction: UIAction(title: "new") { _ in
                UIApplication.shared.requestSceneSessionActivation(nil, userActivity: nil, options: nil, errorHandler: nil)
            })
            new.accessibilityIdentifier = "debug.window.new"
            let other = UIButton(type: .system, primaryAction: UIAction(title: "other") { [unowned self] _ in
                guard let session = others(than: id).first(where: { overlays[$0.persistentIdentifier] != nil }) else { return }
                UIApplication.shared.requestSceneSessionActivation(session, userActivity: nil, options: nil, errorHandler: nil)
            })
            other.accessibilityIdentifier = "debug.window.other"
            let close = UIButton(type: .system, primaryAction: UIAction(title: "close") { [unowned self] _ in
                for session in others(than: id) {
                    overlays[session.persistentIdentifier] = nil
                    UIApplication.shared.requestSceneSessionDestruction(session, options: nil, errorHandler: nil)
                }
            })
            close.accessibilityIdentifier = "debug.window.close"
            let stack = UIStackView(arrangedSubviews: [number, new, other, close])
            stack.alpha = 0.3
            stack.spacing = 4
            stack.frame = CGRect(x: 8, y: scene.coordinateSpace.bounds.height - 40, width: 200, height: 28)
            stack.autoresizingMask = [.flexibleTopMargin]
            controller.view.addSubview(stack)
...
